# money.rs

./: CHANGES.TXT  Cargo.toml  README.md  clippy.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: currency.rs  currency_info.rs  exchange.rs  iso_4217.rs  lib.rs
tests/: test_custom_currency.rs  test_exchange_rate.rs  test_money.rs  test_serde.rs
