[package]
name = "moneta"
version = "0.4.0"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Currency-safe computations with money amounts."
readme = "README.md"
homepage = "https://github.com/mamrhein/money.rs"
repository = "https://github.com/mamrhein/money.rs"
documentation = "https://docs.rs/moneta/"
license-file = "LICENSE.TXT"
keywords = ["money", "currency", "exchange"]
categories = ["data-structures", "mathematics"]

[dependencies]
fpdec = "0.8.1"
fpdec-core = "0.8.0"
quantities = { version = "0.12.0", features = ["fpdec"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde = "1"
serde_json = { version = "1.0" }

[features]
default = ["std"]
std = []
serde = ["dep:serde", "quantities/serde"]
