[package]
name = "moneta"
version = "0.5.1"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Currency-safe computations with money amounts."
readme = "README.md"
homepage = "https://github.com/mamrhein/money.rs"
repository = "https://github.com/mamrhein/money.rs"
documentation = "https://docs.rs/moneta/"
license-file = "LICENSE.TXT"
keywords = ["money", "currency", "exchange"]
categories = ["data-structures", "mathematics"]
rust-version = "1.75.0"

[dependencies]
fpdec = "0.13.0"
fpdec-core = "0.13.0"
quantities = { version = "0.14.1", features = ["fpdec"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde = "1"
serde_json = { version = "1.0" }

[features]
default = ["std"]
std = []
serde = ["dep:serde", "quantities/serde"]
